--- a/run-buddy/index.html
+++ b/run-buddy/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./assets/css/style.css" />
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
     </head>
     <body>
        <!-- navigation -->
-<header>
+    <header>
     <h1><a href="/">RUN BUDDY</a></h1>
     <nav><!-- Unordered list element -->
         <ul>
