add contact form

--- a/index.html
+++ b/index.html
@@ -151,6 +151,18 @@
   <section id="reach-out" class="contact">
     <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
+      <div class="contact-form">
+        <h3>Contact Us</h3>
+        <form>
+           <label for="contact-name">Your Name</label>
+           <input type="text" id="contact-name" placeholder="Your Name" />
+      
+           <label for="contact-message">Message</label>
+           <textarea id="contact-message" placeholder="Message"></textarea>
+      
+           <button type="submit">Submit</button>
+          </form>
+      </div>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3050.7580746452004!2d-111.58062268425779!3d40.12539457940002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874dbc2f6be12d21%3A0x5ba432714367e9fd!2s555%20S%20Main%20St%2C%20Mapleton%2C%20UT%2084664!5e0!3m2!1sen!2sus!4v1635127367072!5m2!1sen!2sus"
       style="border:0;" 
       allowfullscreen="" 
